# shoal-cli

./: .editorconfig  .gitignore  .gitlint  .gitmessage  .mcp.json  .pre-commit-config.yaml  ARCHITECTURE.md  BRANCH_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  COMMIT_GUIDELINES.md  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  RELEASE_PROCESS.md  ROADMAP.md  SECURITY.md  SHOAL.md  TODO.md  demo.tape  justfile  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: shoal-diff-reviewer.md  shoal-lint-checker.md  shoal-test-runner.md
.claude/hooks/: git-guard.sh  test-reminder.sh
.claude/skills/shoal-arch-check/: SKILL.md
.claude/skills/shoal-changelog/: SKILL.md
.claude/skills/shoal-coverage/: SKILL.md
.claude/skills/shoal-deps/: SKILL.md
.claude/skills/shoal-dogfood/: SKILL.md
.claude/skills/shoal-handoff/: SKILL.md
.claude/skills/shoal-help/: SKILL.md
.claude/skills/shoal-parallel/: SKILL.md
.claude/skills/shoal-release/: SKILL.md
.claude/skills/shoal-roadmap/: SKILL.md
.claude/skills/shoal-scaffold/: SKILL.md
.claude/skills/shoal-verify/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
.omp/: AGENTS.md
.omp/extensions/shoal-dev/: index.ts
.omp/skills/shoal-context/: SKILL.md
benchmarks/: transport_spike.py
docs/: AGENTS.md  CLAUDE_CODE_SETUP.md  EXTENSIONS.md  EXTENSIONS_REVIEW.md  FISH_INTEGRATION.md  HTTP_TRANSPORT.md  JOURNALS.md  LOCAL_TEMPLATES.md  REFOCUS_PLAN.md  REMOTE_GUIDE.md  ROBO_GUIDE.md  TROUBLESHOOTING.md  WORKTREE_ENV_INIT.md  architecture.md  cli-reference.md  composition-gateway.md  flow-state-workflows.md  getting-started.md  implementation-audit.md  index.md  operator-playbooks.md  review-checklist.md  team-doctrine.md  terminal-interaction-design.md  transport-spike.md
docs/_scripts/: generate_root_docs.py
docs/archive/: GEMINI.md  PHASE_2_HANDOFF.md  README.md  REVIEW.md
docs/reference/: python-api.md
docs/stylesheets/: extra.css
examples/config/: config.toml
examples/config/conductor/: default.toml
examples/config/robo/: default.toml
examples/config/templates/: base-dev.toml  claude-dev.toml  codex-dev.toml  pi-dev.toml  robo-orchestrator.toml
examples/config/templates/mixins/: mcp-memory.toml  shoal-orchestrator.toml  with-tests.toml
examples/config/tools/: claude.toml  codex.toml  gemini.toml  omp.toml  opencode.toml  pi.toml
openspec/changes/archive/2026-02-16-review-p0-quick-wins/specs/ci-hardening/: spec.md
openspec/changes/archive/2026-02-16-review-p0-quick-wins/specs/fish-integration-fixes/: spec.md
openspec/changes/archive/2026-02-16-review-p0-quick-wins/specs/session-lifecycle-safety/: spec.md
openspec/changes/archive/2026-02-16-review-p0-quick-wins/specs/subprocess-timeouts/: spec.md
openspec/changes/archive/2026-02-16-review-p0-quick-wins/specs/watcher-resilience/: spec.md
openspec/changes/archive/2026-02-16-v060-quick-wins/: design.md  proposal.md
openspec/changes/archive/2026-02-16-v060-quick-wins/specs/changelog-maintenance/: spec.md
openspec/changes/archive/2026-02-16-v060-quick-wins/specs/debug-logging/: spec.md
openspec/changes/archive/2026-02-16-v060-quick-wins/specs/fish-uninstall/: spec.md
openspec/changes/archive/2026-02-16-v060-quick-wins/specs/input-validation/: spec.md
openspec/changes/archive/2026-02-17-v060-testing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-17-v060-testing/specs/api-load-tests/: spec.md
openspec/changes/archive/2026-02-17-v060-testing/specs/integration-tests/: spec.md
openspec/changes/archive/2026-02-17-v060-testing/specs/test-coverage-expansion/: spec.md
openspec/changes/review-p0-quick-wins/: design.md  proposal.md  tasks.md
openspec/changes/review-p0-quick-wins/specs/api-security-defaults/: spec.md
openspec/changes/review-p0-quick-wins/specs/connection-manager-fixes/: spec.md
openspec/changes/v060-quick-wins/: tasks.md
openspec/specs/db-optimization/: spec.md
openspec/specs/troubleshooting-guide/: spec.md
src/shoal/: __init__.py  __main__.py
src/shoal/api/: __init__.py  server.py
src/shoal/cli/: __init__.py  conductor.py  config_cmd.py  demo.py  diag.py  fin.py  history.py  journal.py  mcp.py  nvim.py  remote.py  robo.py  session.py  session_create.py  session_view.py  setup.py  tag.py  template.py  watcher.py  worktree.py
src/shoal/cli/demo/: __init__.py  start_stop.py  tour.py  tutorial.py
src/shoal/core/: config.py  context.py  db.py  detection.py  git.py  journal.py  logging_config.py  notify.py  prompt_delivery.py  remote.py  state.py  status_provider.py  theme.py  tmux.py
src/shoal/dashboard/: popup.py
src/shoal/integrations/: __init__.py
src/shoal/integrations/fish/: __init__.py  installer.py
src/shoal/integrations/fish/templates/: bootstrap.fish  completions.fish  dashboard.fish  hooks.fish  quick-attach.fish  remote.fish
src/shoal/models/: config.py  fin.py  state.py
src/shoal/services/: fin_runtime.py  lifecycle.py  mcp_configure.py  mcp_pool.py  mcp_proxy.py  mcp_shoal_server.py  robo_supervisor.py  status_bar.py  watcher.py
tests/: conftest.py  test_api.py  test_api_load.py  test_cli.py  test_cli_fin.py  test_cli_mcp.py  test_cli_new.py  test_cli_nvim.py  test_cli_remote.py  test_cli_robo.py  test_cli_setup.py  test_cli_watcher.py  test_cli_worktree.py  test_config.py  test_context.py  test_coverage_boost.py  test_coverage_session.py  test_db.py  test_demo.py  test_demo_tutorial.py  test_detection.py  test_diag.py  test_fin_contract_integration.py  test_fish_integration.py  test_git.py  test_git_branch_naming.py  test_history.py  test_http_transport.py  test_integration.py  test_journal.py  test_lifecycle.py  test_lifecycle_hooks.py  test_lifecycle_rollback.py  test_logging.py  test_mcp_configure.py  test_mcp_pool.py  test_mcp_proxy.py  test_mcp_shoal_server.py  test_models.py  test_notify.py  (+19 more)
