[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shoal"
version = "0.3.0"
description = "AI agent orchestration for terminal-first workflows"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "pydantic>=2.10.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
]

[project.scripts]
shoal = "shoal.cli:app"
shoal-mcp-proxy = "shoal.services.mcp_proxy:main"
shoal-status = "shoal.services.status_bar:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "httpx>=0.28.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/shoal"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that require tmux and external tools",
]
